--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!doctype html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Untitled Document</title>
+<link href="main.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+body,td,th {
+    font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
+}
+a:link {
+    color: #000000;
+    text-decoration: none;
+}
+a:visited {
+    text-decoration: none;
+    color: #000000;
+}
+a:hover {
+    text-decoration: underline;
+    color: #000000;
+}
+a:active {
+    text-decoration: none;
+    color: #000000;
+}
+</style>
+</head>
+
+<body>
+<h1> Neil Thornock</h1>
+<h2><a href="https://drive.google.com/drive/u/0/folders/1dFQU1r6MkuACb84bOsI4Oe1yPLtbD_sx">Scores</a></h2>
+<h2><a href="https://www.youtube.com/channel/UCEdEGvZSqEHmE43PLoCFXOg">YouTube</a></h2>
+<h2><a href="https://soundcloud.com/neilthornock">SoundCloud</a></h2>
+</body>
+</html>
