--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ a:active {
 <h1> Neil Thornock</h1>
 <h2><a href="https://drive.google.com/drive/u/0/folders/1dFQU1r6MkuACb84bOsI4Oe1yPLtbD_sx">Scores</a></h2>
 <h2><a href="https://www.youtube.com/channel/UCEdEGvZSqEHmE43PLoCFXOg">YouTube</a></h2>
+<p><a href="https://www.youtube.com/watch?v=ntAibZYsPmE&list=PLLo_KrfM9ZY-smB8RNnl4kvQtv-sBtyJG&ab_channel=NeilThornock">Microtonal</a></p>
+<p><a href="https://www.youtube.com/watch?v=0IgofUX_374&list=PLLo_KrfM9ZY_tnFqnhJVL1AEUqXRLEEzm&ab_channel=NeilThornock">Carillon</a></p>
 <h2><a href="https://soundcloud.com/neilthornock">SoundCloud</a></h2>
 </body>
 </html>
