--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@ a:active {
 <p><a href="https://www.youtube.com/watch?v=ntAibZYsPmE&list=PLLo_KrfM9ZY-smB8RNnl4kvQtv-sBtyJG&ab_channel=NeilThornock">Microtonal</a></p>
 <p><a href="https://www.youtube.com/watch?v=0IgofUX_374&list=PLLo_KrfM9ZY_tnFqnhJVL1AEUqXRLEEzm&ab_channel=NeilThornock">Carillon</a></p>
 <h2><a href="https://soundcloud.com/neilthornock">SoundCloud</a></h2>
+<h2>Primordial Tuning</h2>
+<p>The tuning of my microtonal piano music since 2020.</p>
+<p>This chart shows each piano key and the octave-reduced harmonic it is tuned to.</p>
+<p><img src="primordial-tuning.png" alt="Primordial Tuning" style="width:718px;height:257px"></p>
 </body>
 </html>
