--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@ a:active {
 <h2>Primordial Tuning</h2>
 <p>The tuning of my microtonal piano music since 2020.</p>
 <p>This chart shows each piano key and the octave-reduced harmonic it is tuned to.</p>
-<p><img src="https://github.com/neilthornock/neilthornock.github.io/blob/main/primordial-tuning.png" alt="Primordial Tuning" style="width:718px;height:257px"></p>
+<p><img src="primordial-tuning.png" alt="Primordial Tuning" style="width:718px;height:257px"></p>
 </body>
 </html>
