--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Untitled Document</title>
 <link href="main.css" rel="stylesheet" type="text/css">
 <style type="text/css">
