--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@ a:active {
 <p>The tuning of my microtonal piano music since 2020.</p>
 <p>This chart shows each piano key and the octave-reduced harmonic it is tuned to.</p>
 <p><img src="primordial-tuning.png" alt="Primordial Tuning" style="width:718px;height:257px"></p>
+<h2>Junicorn Tuning</h2>
+A tempered version of 23edo which improves on the 5:6:7 triad. POTE tuning with generator of 416.7476 cents, using subgroup TE, to tune to 2.6/5.7/6.14/11-prime limit.
 </body>
 </html>
