--- a/daddydisappears/index.html
+++ b/daddydisappears/index.html
@@ -510,7 +510,7 @@ June came up to me. &quot;Daddy, read to me please!&quot;
 &lt;/div&gt;
 &lt;div id=&quot;mydiv&quot; class=&quot;noselect video-container&quot; style=&quot;background: #00BFFF; white-space: pre-wrap; overflow: hidden;&quot;&gt;
     &lt;video id=&quot;myvid&quot; autoplay muted loop&gt;
-        &lt;source src=&quot;/Users/neilthornock/Desktop/ph_1.mp4&quot; type=&quot;video/mp4&quot; /&gt;
+        &lt;source src=&quot;./ph_1.mp4&quot; type=&quot;video/mp4&quot; /&gt;
     &lt;/video&gt;
     &lt;span id=&quot;myspan&quot;&gt;&lt;/span&gt;
 &lt;/div&gt;
